rake-runner-test/testData/plugins/rakeRunner/app_rspec/spec/statistics/compile_error/error1_spec.rb
# @author: Roman Chernyatchik
require "rspec"

describe "Compilation"  do

  it "should fail" do
    $
  end
end